--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "vue-code-view",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.3.3",
+  "description": "Code editor for Vue!",
+  "main": "lib/vue-code-viewer.common.js",
+  "unpkg": "lib/vue-code-viewer.umd.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve ",
+    "build": "vue-cli-service build --mode production",
+    "build:pub": "vue-cli-service build  --mode npm --target lib --name vue-code-viewer --dest lib packages/code-viewer/index.js",
     "lint": "vue-cli-service lint",
-    "clean": "rimraf node_modules"
+    "bootstrap": "cnpm i || yarn",
+    "clean": "rimraf node_modules",
+    "cm": "git-cz"
   },
   "dependencies": {
     "codemirror": "^5.62.2",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.5",
+    "dayjs": "^1.10.6",
     "lodash": "^4.17.21",
+    "screenfull": "^5.1.0",
+    "throttle-debounce": "^2.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue2-storage": "^6.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,13 +30,34 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "ant-design-vue": "^1.7.8",
     "babel-eslint": "^10.1.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "element-ui": "^2.15.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "github-markdown-dracula-css": "^4.0.3",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "vue-loader": "^15.9.8",
+    "vue-markdown-loader": "^2.4.1",
+    "vue-router": "^3.2.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.4.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andurils/vue-code-view.git"
+  },
+  "author": "andurils",
+  "license": "MIT",
+  "homepage": "https://andurils.github.io/vue-code-view"
 }
