--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:pub": "vue-cli-service build  --mode npm --target lib --name vue-code-viewer --dest lib packages/code-viewer/index.js",
     "lint": "vue-cli-service lint",
     "bootstrap": "cnpm i || yarn",
-    "clean": "rimraf node_modules",
-    "cm": "git-cz"
+    "clean": "rimraf node_modules"
   },
   "dependencies": {
     "codemirror": "^5.62.2",
@@ -24,6 +23,7 @@
     "vue2-storage": "^6.1.3"
   },
   "devDependencies": {
+    "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -32,8 +32,8 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "ant-design-vue": "^1.7.8",
     "babel-eslint": "^10.1.0",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^9.0.0",
     "element-ui": "^2.15.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
@@ -42,16 +42,12 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "vue-code-view": "^0.3.3",
     "vue-loader": "^15.9.8",
     "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   },
   "repository": {
     "type": "git",
