--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-code-view",
-  "version": "0.3.3",
+  "version": "0.5.0",
   "description": "Code editor for Vue!",
   "main": "lib/vue-code-viewer.common.js",
   "unpkg": "lib/vue-code-viewer.umd.js",
@@ -42,6 +42,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "tiny-sass-compiler": "^0.12.2",
     "vue-code-view": "^0.3.3",
     "vue-loader": "^15.9.8",
     "vue-markdown-loader": "^2.4.1",
