✨ feat: 组件交互优化。 - 样式重写。 - 手写 `button` 组件   。 - 使用 `iconfont` 图标字体  。 - 增加展示透明背景切换。

--- a/.npmignore
+++ b/.npmignore
@@ -13,7 +13,13 @@ packages/
 .eslintrc.js
 .prettierrc.js 
 .eslintignore
-.prettierignore  
-babel.config.json  
+.prettierignore
+babel.config.js
+vue.config.js 
+.travis.yml
+.env.* 
 
-lib/demo.html
+
+lib/*.html
+lib/*.gz
+reference.md
