--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -28,7 +27,6 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "ant-design-vue": "^1.7.8",
     "babel-eslint": "^10.1.0",
-    "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
@@ -38,16 +36,16 @@
     "eslint-plugin-vue": "^6.2.2",
     "github-markdown-dracula-css": "^4.0.3",
     "less": "^4.1.2",
-    "lodash": "^4.17.21",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
-    "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^8.0.2",
     "tiny-sass-compiler": "^0.12.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue": "^2.6.11",
     "vue-loader": "^15.9.8",
     "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.2.0",
+    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0"
   },
   "repository": {
