--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "github-markdown-dracula-css": "^4.0.3",
     "less": "^4.1.2",
+    "markdown-it-container": "^3.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
