💥 支持MD文档解析

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "lib/vue-code-viewer.common.js",
   "unpkg": "lib/vue-code-viewer.umd.js",
   "scripts": {
+    "bootstrap": "cnpm i || yarn",
     "serve": "vue-cli-service serve ",
     "build": "vue-cli-service build --mode production",
-    "build:pub": "vue-cli-service build  --mode npm --target lib --name vue-code-viewer --dest lib packages/code-viewer/index.js",
+    "dev:play": "vue-cli-service serve --mode play",
+    "deploy:build": "vue-cli-service build --mode deploy",
+    "dist": "vue-cli-service build  --mode npm --target lib --name vue-code-viewer --dest lib src/index.js",
     "lint": "vue-cli-service lint",
-    "bootstrap": "cnpm i || yarn",
     "clean": "rimraf node_modules"
   },
   "dependencies": {
@@ -35,11 +37,15 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "github-markdown-dracula-css": "^4.0.3",
+    "markdown-it": "^12.2.0",
+    "markdown-it-anchor": "^8.4.1",
+    "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "tiny-sass-compiler": "^0.12.2",
+    "transliteration": "^2.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.8",
