--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "vue-code-view",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "description": "Code editor for Vue!",
   "main": "lib/vue-code-viewer.common.js",
   "unpkg": "lib/vue-code-viewer.umd.js",
   "scripts": {
     "bootstrap": "cnpm i || yarn",
-    "serve": "vue-cli-service serve ",
-    "build": "vue-cli-service build --mode production",
+    "dev": "vue-cli-service serve ",
     "dev:play": "vue-cli-service serve --mode play",
+    "dist": "vue-cli-service build  --mode production --target lib --name vue-code-viewer --dest lib src/index.js",
     "deploy:build": "vue-cli-service build --mode deploy",
-    "dist": "vue-cli-service build  --mode npm --target lib --name vue-code-viewer --dest lib src/index.js",
     "lint": "vue-cli-service lint",
     "clean": "rimraf node_modules"
   },
   "dependencies": {
     "codemirror": "^5.62.2",
-    "throttle-debounce": "^3.0.1"
+    "throttle-debounce": "^3.0.1",
+    "tiny-sass-compiler": "^0.12.2"
   },
   "peerDependencies": {
     "vue": "^2.6.11"
@@ -37,23 +37,26 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "github-markdown-dracula-css": "^4.0.3",
+    "highlight.js": "^11.3.1",
     "markdown-it": "^12.2.0",
-    "markdown-it-anchor": "^8.4.1",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
-    "tiny-sass-compiler": "^0.12.2",
-    "transliteration": "^2.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
+    "vue-code-view": "^0.3.8",
     "vue-loader": "^15.9.8",
-    "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0"
   },
+  "keywords": [
+    "vue",
+    "components",
+    "codemirror"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andurils/vue-code-view.git"
