--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-code-view",
   "version": "0.3.9",
-  "description": "Code editor for Vue!",
+  "description": "A code editor component based on Vue.js 2 : compile source code (SFC) and render it in real time 🖖",
   "main": "lib/vue-code-viewer.common.js",
   "unpkg": "lib/vue-code-viewer.umd.js",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "codemirror": "^5.62.2",
+    "deepmerge": "^4.2.2",
     "throttle-debounce": "^3.0.1",
     "tiny-sass-compiler": "^0.12.2"
   },
@@ -46,7 +47,6 @@
     "sass-loader": "^8.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.11",
-    "vue-code-view": "^0.3.8",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11",
@@ -55,7 +55,8 @@
   "keywords": [
     "vue",
     "components",
-    "codemirror"
+    "codemirror",
+    "code editor"
   ],
   "repository": {
     "type": "git",
