--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "github-markdown-dracula-css": "^4.0.3",
     "highlight.js": "^11.3.1",
     "markdown-it": "^12.2.0",
     "markdown-it-chain": "^1.3.0",
@@ -64,5 +63,10 @@
   },
   "author": "andurils",
   "license": "MIT",
-  "homepage": "https://andurils.github.io/vue-code-view"
+  "homepage": "https://andurils.github.io/vue-code-view",
+  "browserslist": [
+    "last 2 version",
+    "> 1%",
+    "not dead"
+  ]
 }
