--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "highlight.js": "^11.3.1",
+    "less": "^4.1.2",
     "markdown-it": "^12.2.0",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
