--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "codemirror": "^5.62.2",
     "deepmerge": "^4.2.2",
-    "lodash": "^4.17.21",
     "throttle-debounce": "^3.0.1",
     "tiny-sass-compiler": "^0.12.2"
   },
@@ -44,8 +43,8 @@
     "markdown-it": "^12.2.0",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
+    "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
     "stylus": "^0.55.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
