--- a/.npmignore
+++ b/.npmignore
@@ -7,7 +7,8 @@ build/
 src/
 dist/
 deploy/
-
+lib/*.html
+lib/*.html.gz
 
 
 # 忽略指定文件 
@@ -17,5 +18,7 @@ deploy/
 .env
 .env.*
 *.js
-*.md
 *.yml
+
+CHANGELOG.zh-CN.md
+INSPIRED.zh-CN.md
