--- a/package.json
+++ b/package.json
@@ -20,37 +20,37 @@
     "tiny-sass-compiler": "^0.12.2"
   },
   "peerDependencies": {
-    "vue": "^2.6.11"
+    "vue": "^2.7.0"
   },
   "devDependencies": {
     "@iconify/vue2": "^1.1.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "~4.5.18",
+    "@vue/cli-plugin-eslint": "~4.5.18",
+    "@vue/cli-plugin-router": "~4.5.18",
+    "@vue/cli-plugin-vuex": "~4.5.18",
+    "@vue/cli-service": "~4.5.18",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "ant-design-vue": "^1.7.8",
     "babel-eslint": "^10.1.0",
+    "classnames": "^2.3.1",
     "compression-webpack-plugin": "^6.1.1",
-    "core-js": "^3.6.5",
-    "element-ui": "^2.15.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^9.2.0",
     "highlight.js": "^11.3.1",
     "less": "^4.1.2",
     "markdown-it": "^12.2.0",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
+    "typescript": "^4.7.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.8",
+    "vue": "^2.7.0",
+    "vue-loader": "^15.10.0",
     "vue-router": "^3.2.0",
-    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0"
   },
   "keywords": [
