--- a/package.json
+++ b/package.json
@@ -45,16 +45,18 @@
     "classnames": "^2.3.1",
     "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.23.4",
+    "escape-html": "^1.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
-    "highlight.js": "^11.3.1",
+    "fs-extra": "^10.1.0",
     "less": "^4.1.2",
     "markdown-it": "^12.2.0",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.2.1",
+    "prismjs": "^1.28.0",
     "rimraf": "^3.0.2",
     "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
