--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vueuse/core": "^8.7.5",
-    "babel-eslint": "^10.1.0",
+    "chalk": "4.1.2",
     "classnames": "^2.3.1",
     "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.23.4",
@@ -49,11 +49,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
-    "fs-extra": "^10.1.0",
     "less": "^4.1.2",
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^8.4.1",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
+    "markdown-it-emoji": "^1.4.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.2.1",
     "prismjs": "^1.28.0",
