--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vueuse/core": "^8.7.5",
+    "@vueuse/core": "^8.9.4",
     "chalk": "4.1.2",
     "classnames": "^2.3.1",
     "compression-webpack-plugin": "^6.1.1",
@@ -51,9 +51,11 @@
     "eslint-plugin-vue": "^9.2.0",
     "less": "^4.1.2",
     "markdown-it": "^8.4.1",
+    "markdown-it-anchor": "^5.3.0",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-table-of-contents": "^0.4.4",
     "normalize.css": "^8.0.1",
     "prettier": "^2.2.1",
     "prismjs": "^1.28.0",
