--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:play": "vue-cli-service serve --mode play",
     "dist": "vue-cli-service build  --mode production --target lib --name vue-code-viewer --dest lib src/index.js",
     "deploy:build": "vue-cli-service build --mode deploy",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "commit": "cz"
   },
   "dependencies": {
     "codemirror": "^5.62.2",
@@ -42,9 +43,11 @@
     "@vueuse/core": "^8.9.4",
     "chalk": "4.1.2",
     "classnames": "^2.3.1",
+    "commitizen": "^4.2.5",
     "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.23.4",
     "css-loader": "^5.2.7",
+    "cz-conventional-changelog": "^3.3.0",
     "escape-html": "^1.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -62,6 +65,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
+    "stylus": "^0.58.1",
     "tua-body-scroll-lock": "^1.2.1",
     "typescript": "^4.7.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -70,6 +74,11 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "webpack": "^4.36.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "keywords": [
     "vue",
