--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "codemirror": "^5.62.2",
     "deepmerge": "^4.2.2",
+    "pinia": "^2.0.18",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "throttle-debounce": "^3.0.1"
   },
   "peerDependencies": {
@@ -35,7 +37,6 @@
     "@vue/cli-plugin-eslint": "~4.5.18",
     "@vue/cli-plugin-router": "~4.5.18",
     "@vue/cli-plugin-typescript": "~4.5.18",
-    "@vue/cli-plugin-vuex": "~4.5.18",
     "@vue/cli-service": "~4.5.18",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-prettier": "^6.0.0",
@@ -72,7 +73,6 @@
     "vue": "^2.7.0",
     "vue-loader": "^15.10.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
     "webpack": "^4.36.0"
   },
   "config": {
