--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@iconify/vue2": "^1.1.3",
+    "@mdit-vue/plugin-headers": "^0.11.1",
     "@types/codemirror": "^5.60.5",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^18.0.4",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -53,6 +55,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
+    "jquery": "^3.6.1",
+    "js-base64": "^3.7.3",
     "less": "^4.1.2",
     "markdown-it": "^8.4.1",
     "markdown-it-anchor": "^5.3.0",
