--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
+    "fflate": "^0.7.4",
     "jquery": "^3.6.1",
     "js-base64": "^3.7.3",
     "less": "^4.1.2",
