--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "main": "lib/vue-code-viewer.common.js",
   "unpkg": "lib/vue-code-viewer.umd.js",
   "typings": "types/index.d.ts",
+  "types": "dist/repl.d.ts",
   "scripts": {
     "bootstrap": "pnpm install",
-    "clean": "rimraf node_modules",
     "dev": "vue-cli-service serve ",
     "dev:play": "vue-cli-service serve --mode play",
     "dist": "rimraf node_modules && pnpm install &&  vue-cli-service build  --mode production --target lib --name vue-code-viewer --dest lib src/index.ts",
     "deploy:build": "vue-cli-service build --mode deploy",
     "lint": "vue-cli-service lint",
+    "clean": "rimraf node_modules",
     "commit": "cz"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "vue": "^2.7.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.21.3",
     "@iconify/vue2": "^1.1.3",
     "@mdit-vue/plugin-headers": "^0.11.1",
     "@types/codemirror": "^5.60.5",
@@ -56,6 +58,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
     "fflate": "^0.7.4",
+    "hash-sum": "^2.0.0",
+    "html-loader": "^4.2.0",
     "jquery": "^3.6.1",
     "js-base64": "^3.7.3",
     "less": "^4.1.2",
@@ -72,6 +76,7 @@
     "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
     "stylus": "^0.58.1",
+    "sucrase": "^3.31.0",
     "tua-body-scroll-lock": "^1.2.1",
     "typescript": "^4.7.3",
     "vue": "^2.7.0",
