--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,10 @@
       "@examples/*": ["examples/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
+    "typeRoots": [
+      "/@types",
+      "./node_modules/@types"
+    ] /* Specify multiple folders that act like './node_modules/@types'. */,
     "types": [
       "node",
       "webpack-env"
