--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-.DS_Store
-node_modules
-/dist
-/lib/*.html
-/lib/*.html.gz
-/deploy
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
-.history
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
