--- a/package.json
+++ b/package.json
@@ -1,71 +1,51 @@
 {
   "name": "vue-code-view",
-  "version": "0.5.0",
-  "packageManager": "pnpm@7.1.0",
+  "version": "0.6.0",
+  "type": "module",
   "description": "A Vue 2 component like Vue SFC REPL `@vue/repl` : u can edit, run and preview the code effect display in real time on the web page.",
-  "main": "lib/vue-code-viewer.common.js",
-  "unpkg": "lib/vue-code-viewer.umd.js",
-  "typings": "types/index.d.ts",
+  "main": "dist/ssr-stub.js",
+  "module": "dist/vue-repl.js",
+  "files": [
+    "dist"
+  ],
   "types": "dist/repl.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-repl.js",
+      "require": "./dist/ssr-stub.js",
+      "types": "./dist/repl.d.ts"
+    },
+    "./style.css": "./dist/style.css",
+    "./dist/style.css": "./dist/style.css"
+  },
   "scripts": {
-    "bootstrap": "pnpm install",
-    "dev": "vue-cli-service serve ",
-    "dist": "rimraf node_modules && pnpm install &&  vue-cli-service build  --mode production --target lib --name vue-code-viewer --dest lib src/index.ts",
-    "lint": "vue-cli-service lint",
-    "clean": "rimraf node_modules",
-    "commit": "cz"
-  },
-  "dependencies": {
-    "codemirror": "^5.62.2"
-  },
-  "peerDependencies": {
-    "vue": "^2.7.0"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "build-types": "vue-tsc -p tsconfig.build.json &&  rimraf dist/src",
+    "prepublishOnly": "npm run build && npm run build-types",
+    "preview": "vite preview",
+    "clean": "rimraf dist  && rimraf node_modules",
+    "bootstrap": "pnpm install"
   },
   "devDependencies": {
     "@babel/types": "^7.21.3",
-    "@iconify/vue2": "^1.1.3",
-    "@types/codemirror": "^5.60.5",
-    "@types/node": "^18.0.4",
-    "@types/webpack-env": "^1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "@vue/cli-plugin-babel": "~4.5.18",
-    "@vue/cli-plugin-eslint": "~4.5.18",
-    "@vue/cli-plugin-typescript": "~4.5.18",
-    "@vue/cli-service": "~4.5.18",
-    "@vue/compiler-sfc": "^3.2.37",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "chalk": "4.1.2",
-    "classnames": "^2.3.1",
-    "commitizen": "^4.2.5",
-    "compression-webpack-plugin": "^6.1.1",
-    "core-js": "^3.23.4",
-    "css-loader": "^5.2.7",
-    "cz-conventional-changelog": "^3.3.0",
-    "escape-html": "^1.0.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^9.2.0",
+    "@microsoft/api-extractor": "^7.34.4",
+    "@types/codemirror": "^5.60.7",
+    "@types/node": "^18.15.3",
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "codemirror": "^5.62.3",
     "fflate": "^0.7.4",
     "hash-sum": "^2.0.0",
-    "js-base64": "^3.7.3",
-    "less": "^4.1.2",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.44.0",
-    "sass-loader": "^8.0.2",
-    "stylus": "^0.58.1",
-    "sucrase": "^3.31.0",
-    "typescript": "^4.7.3",
+    "rimraf": "^4.4.0",
+    "sucrase": "^3.29.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0",
     "vue": "^2.7.0",
-    "vue-loader": "^15.10.0",
-    "webpack": "^4.36.0"
+    "vue-tsc": "^1.2.0"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+  "peerDependencies": {
+    "vue": "^2.7.0"
   },
   "keywords": [
     "vue",
@@ -80,9 +60,7 @@
   "author": "andurils",
   "license": "MIT",
   "homepage": "https://andurils.github.io/vue-code-view",
-  "browserslist": [
-    "last 2 version",
-    "> 1%",
-    "not dead"
-  ]
+  "bugs": {
+    "url": "https://github.com/andurils/vue-code-view/issues"
+  }
 }
