Revert "Replace the editor with Monaco"

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-code-view",
-  "version": "0.6.1",
+  "version": "0.6.0",
   "type": "module",
-  "description": "Vue SFC REPL as a Vue 2.7+ component.",
+  "description": "A Vue 2 component like Vue SFC REPL `@vue/repl` : u can edit, run and preview the code effect display in real time on the web page.",
   "main": "dist/ssr-stub.js",
-  "module": "dist/vue-code-view.js",
+  "module": "dist/vue-repl.js",
   "files": [
     "dist"
   ],
@@ -35,7 +35,6 @@
     "codemirror": "^5.62.3",
     "fflate": "^0.7.4",
     "hash-sum": "^2.0.0",
-    "monaco-editor": "^0.36.1",
     "rimraf": "^4.4.0",
     "sucrase": "^3.29.0",
     "typescript": "^4.9.3",
