--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-code-view",
-  "version": "0.5.0",
+  "name": "vcv",
+  "version": "0.0.6",
   "packageManager": "pnpm@7.1.0",
   "description": "A Vue 2 component like Vue SFC REPL `@vue/repl` : u can edit, run and preview the code effect display in real time on the web page.",
   "main": "lib/vue-code-viewer.common.js",
@@ -17,7 +17,6 @@
     "commit": "cz"
   },
   "dependencies": {
-    "codemirror": "^5.62.2",
     "throttle-debounce": "^3.0.1"
   },
   "peerDependencies": {
@@ -25,7 +24,6 @@
   },
   "devDependencies": {
     "@iconify/vue2": "^1.1.3",
-    "@types/codemirror": "^5.60.5",
     "@types/node": "^18.0.4",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -49,12 +47,13 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^9.2.0",
     "less": "^4.1.2",
+    "monaco-editor": "^0.30.0",
+    "monaco-editor-webpack-plugin": "^6.0.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "sass": "^1.44.0",
     "sass-loader": "^8.0.2",
     "stylus": "^0.58.1",
-    "tua-body-scroll-lock": "^1.2.1",
     "typescript": "^4.7.3",
     "vue": "^2.7.0",
     "vue-loader": "^15.10.0",
@@ -69,7 +68,6 @@
   "keywords": [
     "vue",
     "components",
-    "codemirror",
     "code editor"
   ],
   "repository": {
